--- a/css/styles.css
+++ b/css/styles.css
@@ -10147,6 +10147,19 @@ header.masthead .masthead-heading {
   font-family: "Century Gothic", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.masthead-text-wrapper {
+  animation: masthead-text;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes masthead-text {
+  100% {
+    opacity: 1;
+  }
+}
+
 @media (min-width: 768px) {
   header.masthead {
     padding-top: 17rem;
@@ -10183,18 +10196,18 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(45, 106, 163, 0.8);
+  background: rgba(48, 149, 231, 0.5);
   align-items: center;
   justify-content: center;
-  opacity: 0;
-  transition: opacity ease-in-out 0.25s;
+  opacity: 1;
+  transition: opacity ease-in-out 0.5s;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
   font-size: 1.25rem;
   color: white;
 }
 #portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
-  opacity: 1;
+  opacity: 0;
 }
 #portfolio .portfolio-item .portfolio-caption {
   padding: 1.5rem;
@@ -10496,7 +10509,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 .service-circle {
   height: 125px;
   width: 125px;
-  background: linear-gradient(var(--blue), rgb(154, 201, 255));
+  background: linear-gradient(var(--blue), rgb(150, 174, 255));
   border-radius: 50%;
 }
 
@@ -10509,6 +10522,6 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 @keyframes service-hover {
   100% {
-    box-shadow: 0px 0px 8px rgb(55, 192, 255, 1);
+    box-shadow: 0px 0px 20px rgb(55, 192, 255, 1);
   }
 }
